--- a/Naive_bayes.ipynb
+++ b/Naive_bayes.ipynb
@@ -183,6 +183,53 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## Making the Confusion Matrix\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "gj28nPMRLKax"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import confusion_matrix, accuracy_score\n",
+        "cm = confusion_matrix(y_test, y_pred)\n",
+        "print(cm)\n",
+        "accuracy_score(y_test, y_pred)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wtnCfTTILcnQ",
+        "outputId": "20d8c6dc-47ab-4865-af52-68803915181d"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[54  4]\n",
+            " [ 1 21]]\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9375"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "6OMC_P0diaoD"
       },
